--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Sharbatanu Chatterjee"
+locale                   : "en"
+title                    : "Sharbat's Homepage"
 title_separator          : "-"
 name                     : &name "Sharbatanu Chatterjee"
 description              : &description "personal description"
@@ -32,7 +32,7 @@ comments:
     colorscheme          : # "light" (default), "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
-  branch                 : "gh-pages" # "master", "gh-pages"
+  branch                 : "master" # "master", "gh-pages"
   commitMessage          : "New comment."
   filename               : comment-{@timestamp}
   format                 : "yml"
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sharbatanu Chatterjee"
-  avatar           : "profile.png"
+  avatar           : "Sharbat_prof.jpeg"
   bio              : "PhD student, Sorbonne Université"
   location         : "Paris, France"
   employer         :
@@ -255,7 +255,7 @@ sass:
 permalink: /:categories/:title/
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-timezone: America/Los_Angeles # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: Europe/Paris # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
