--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   location         : "Paris, France"
   employer         :
   pubmed           : 
-  googlescholar    : # "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=u3L1z2wAAAAJ"
   email            :
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
