--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,16 @@
 # main links links
 main:
-  - title: "Publications"
+  - title: "Publications" 
     url: /publications/
 
   - title: "Talks"
-    url: /talks/    
+    url: /talks/
 
   - title: "Teaching"
-    url: /teaching/    
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
-    
+    url: /teaching/
+
   - title: "CV"
     url: /cv/
-          
-  - title: "Blog Posts"
+
+  - title: "Blog"
     url: /year-archive/
-    
-  # - title: "Guide"
-  #   url: /markdown/
