--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 author:
   name             : "Sharbatanu Chatterjee"
   avatar           : "Sharbat_prof.jpeg"
-  bio              : "PhD student, Sorbonne Université"
+  bio              : "Postdoctoral researcher, NeuroPSI"
   location         : "Paris, France"
   employer         :
   pubmed           : 
